syntax = "proto3";
package cineyma;

///multiplexed message wrapper for cluster protocol
message ClusterMessage {
    oneof payload {
        Envelope envelope = 1;
        GossipMessage gossip = 2;
    }
}

//envelope is a wrapper for all remote messages
message Envelope{
    string message_type = 1; //eg : mycrate::MyMessage
    bytes payload = 2;
    uint64 correlation_id = 3; //request-response correlation
    string sender_node = 4;
    string target_actor = 5;
    bool is_response = 6;
}

message GossipMessage {
    repeated NodeInfo members = 1;
    repeated ActorLocation actors = 2;
}

message NodeInfo{
    string id = 1;
    string addr = 2;
    NodeStatus status = 3;
}

message ActorLocation{
    string actor_id = 1;
    string node_id = 2;
    string actor_type = 3;
}

enum NodeStatus {
  UP = 0;
  SUSPECT = 1;
  DOWN = 2;
}